--- a/roles/asterisk/templates/odbc.ini.j2
+++ b/roles/asterisk/templates/odbc.ini.j2
@@ -1,8 +1,10 @@
 [MySQL-asteriskcdrdb]
-Description = MySQL connection to 'asteriskcdrdb' database
-Driver = MySQL
+Description = MariaDB connection to 'asteriskcdrdb' database
+Driver = MariaDB
 Server = localhost
 Database = asteriskcdrdb
 Port = 3306
 Socket = /var/run/mysqld/mysqld.sock
 Option = 3
+User = {{ db_fpbx_user }}
+Password = {{ db_fpbx_pass }}
