--- a/roles/asterisk/templates/odbcinst.ini.j2
+++ b/roles/asterisk/templates/odbcinst.ini.j2
@@ -1,5 +1,6 @@
-[MySQL]
-Description = ODBC for MySQL (MariaDB)
-Driver=/usr/lib/odbc/libmyodbc5w.so
-Setup=/usr/lib/odbc/libodbcmy5S.so
+[MariaDB]
+Description = ODBC for MariaDB (via libmaodbc.so)
+Driver = /usr/lib/x86_64-linux-gnu/odbc/libmaodbc.so
+Setup = /usr/lib/x86_64-linux-gnu/odbc/libodbcmyS.so
 FileUsage = 1
+UsageCount = 1
